--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
   <body>
-Ontem comi pipoca com sal fiquei todo empazinado
+Ontem comi pipoca com sal fiquei todo empazinado,
     to mal, mal, mal 
     ontem comi pipoca com um litro de coca despois mi dei mal 
   </body>
