--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 </head>
   <body>
-Ontem comi pipoca com sal fiquei todo empazinado,
-    to mal, mal, mal 
-    ontem comi pipoca com um litro de coca despois mi dei mal 
+HELLO MOTHERFUCKER
   </body>
 </html>
