--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 </head>
   <body bgcolor=#ff00fe>
+   <fonte colore=blue>
 A eduarda so sabe encher o saco
    </br> ela enche demais o meu saco </br>
   </body>
