--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
   <body bgcolor=#ff00fe>
-   <font colore=#blue>
+   <font colore=blue>
 A eduarda so sabe encher o saco
    </br> ela enche demais o meu saco </br>
   </body>
