--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
    <font colore=blue>
 A eduarda so sabe encher o saco
    </br> ela enche demais o meu saco </br>
-    <img src=download (1).html>
+    <img src=dimitri.jpg>
   </body>
 </html>
