--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
   <body bgcolor=#ff00fe>
    <font colore=blue>
-A eduarda so sabe encher o saco
-   </br> ela enche demais o meu saco </br>
+TUTS TUTS RELA RELA
+   </br> RELA RELA TUTS TUTS </br>
     <img src=dimitri.jpg>
   </body>
 </html>
