--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 </head>
   <body bgcolor=#ff00fe>
-   <font colore=blue>
+   <font colore=RED>
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
-    <img src=dimitri.jpg>
+    <br>
+    <img src=dimitri.jpg winth=75% height=75% align=center>
   </body>
 </html>
