--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
     <br>
-    <img src=dimitri.jpg winth=75% height=75% align=center>
+   <center> </center><img src=dimitri.jpg winth=75% height=75% align=center> </center>
   </body>
 </html>
