--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
     <br>
-   <center> </center><img src=dimitri.jpg winth=75% height=75% align=center> </center>
+   </center> <img src=dimitri.jpg winth=75% height=75% align=center> </center>
+    <font size=12 color=red>
   </body>
 </html>
