--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
  <head>
 
 </head>
-  <body bgcolor=#ff00fe>
-   <font colore=RED>
+  <body bgcolor=#blue>
+   <font colore=#red>
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
     <br>
