--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
  <head>
-
+<tiltle>Bailão do Dimitri</tiltle>
 </head>
-  <body bgcolor=#blue>
-   <font colore=#red>
+  <font bgcolor=#black>
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
-    <br>
+    <p>
    </center> <img src=dimitri.jpg winth=75% height=75% align=center> </center>
     <font size=12 color=red>
   </body>
