--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
  <head>
 <tiltle>Bailão do Dimitri</tiltle>
 </head>
+ <body bgcolor=#ff00fe>
   <font bgcolor=#black>
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
     <p>
-   </center> <img src=dimitri.jpg winth=75% height=75% align=center> </center>
-    <font size=12 color=red>
+   </center> <img src=dimitri.jpg winth=75% height=75% > </center>
+    <font size=13 color=red>
   </body>
 </html>
