--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 TUTS TUTS RELA RELA
    </br> RELA RELA TUTS TUTS </br>
     <p>
-   </center> <img src=dimitri.jpg winth=75% height=75% > </center>
+   <center> <img src=dimitri.jpg width=75% height=75% > </center>
     <font size=13 color=red>
   </body>
 </html>
