--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <html>
  <head>
 <title>Bailão do Dimitri</title>
+  <style>
+   h1{
+    color:red;
+    size:30px;
+   }
+  </style>
 </head>
  <br>
  <body bgcolor=#ff00fe>
   <font bgcolor=#black>
-TUTS TUTS RELA RELA
-   </br> RELA RELA TUTS TUTS </br>
+<font size=13 color=red>TUTS TUTS RELA RELA
+   </br> <font size=13 color=red>RELA RELA TUTS TUTS </br>
     <p>
-     <font size=13 color=red>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
-  </body>
+      <table >
+       <tr>
+         <td>
+          1
+         </td>
+        <td>
+         2
+        </td>
+        <td>
+         3
+        </td>
+       </tr>
+       <tr>
+        <td>
+         4
+        </td>
+        <td>
+         5
+        </td>
+        <td>
+         6
+        </td>
+        <td>
+      </tr>
+      <tr>
+         7
+        </td>
+        <td>
+         8
+        </td>
+        <td>
+         9
+        </td>
+       </tr>
+      </table>
+      </body>
 </html>
