--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     color:red;
     size:30px;
    }
+   body{
+    backgroundcolor:white;
+   }
+   P{
+    color:green;
+    size:12px;
+   }
   </style>
 </head>
  <br>
- <body bgcolor=#ff00fe>
   <font bgcolor=#black>
-<font size=13 color=red>TUTS TUTS RELA RELA
-   </br> <font size=13 color=red>RELA RELA TUTS TUTS </br>
+<font size=13 color=red>PEGA NO PAU
+   </br> <font size=13 color=red>PEGA NA XOTA </br>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
