--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <style>
    h1{
     color:red;
-    size:30px;
+    font-size:30px;
    }
    body{
-    backgroundcolor:white;
+    background-color:white;
    }
    P{
     color:green;
-    size:12px;
+   font- size:12px;
    }
   </style>
 </head>
