--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </style>
 </head>
  <br>
-  <font bgcolor=#black>
-<font size=13 color=red>TUTS TUTS RELA RELA
-   </br> <font size=13 color=red>RELA RELA TUTS TUTS </br>
+  < bgcolor=#black>
+< size=13 color=red>TUTS TUTS RELA RELA
+   </br> < size=13 color=red>RELA RELA TUTS TUTS </br>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
