--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Bailão do Iguinho & Cacica</title>
   <style>
    h1{
-    color:red;
+    font color:red;
     font-size:30px;
    }
    body{
@@ -16,9 +16,9 @@
   </style>
 </head>
  <br>
-  < bgcolor=#black>
-< size=13 color=red>TUTS TUTS RELA RELA
-   </br> < size=13 color=red>RELA RELA TUTS TUTS </br>
+  <bgcolor=#black>
+ TUTS TUTS RELA RELA
+   RELA RELA TUTS TUTS </br>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
