--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     font-size:30px;
    }
    body{
-    background-color:white;
+    background-color:black;
    }
    P{
-    color:green;
+    color:red;
    font- size:12px;
    }
   </style>
 </head>
  <br>
-  <bgcolor=#black>
  TUTS TUTS RELA RELA
    RELA RELA TUTS TUTS </br>
     <p>
