--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
  <br>
- TUTS TUTS RELA RELA
+  <font color=blue> TUTS TUTS RELA RELA
    RELA RELA TUTS TUTS </br>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
