--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
         </td>
        </tr>
       </table>
-      </body>
+     <br>
+  <font color=blue>Eu quero que risque meu nome da sua agenda
+Esqueça o meu telefone não me ligue mais
+Porque já estou cansado de ser o remédio
+Pra curar o seu tédio
+Quando seus amores não lhe satisfazem
+Cansei de ser o seu palhaço
+Fazer o que sempre quis
+Cansei de curar sua fossa
+Quando você não se sentia feliz</br>
+    <p>
+  </body>
 </html>
 
     
