--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 Esqueça o meu telefone não me ligue mais
 Porque já estou cansado de ser o remédio
 Pra curar o seu tédio
-Quando seus amores não lhe satisfazem
+  </p>Quando seus amores não lhe satisfazem
 Cansei de ser o seu palhaço
 Fazer o que sempre quis
 Cansei de curar sua fossa
