--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   <font color=blue>Eu quero que risque meu nome da sua agenda
 Esqueça o meu telefone não me ligue mais
 Porque já estou cansado de ser o remédio
-Pra curar o seu tédio
+Pra curar o seu CU
   </p>Quando seus amores não lhe satisfazem
 Cansei de ser o seu palhaço
 Fazer o que sempre quis
-Cansei de curar sua fossa
+Cansei de curar sua BUNDA
 Quando você não se sentia feliz</br>
     <p>
   </body>
