--- a/index.html
+++ b/index.html
@@ -57,15 +57,23 @@
        </tr>
       </table>
      <br>
-  <font color=blue>Eu quero que risque meu nome da sua agenda
-Esqueça o meu telefone não me ligue mais
-Porque já estou cansado de ser o remédio
-Pra curar o seu CU
-  </p>Quando seus amores não lhe satisfazem
-Cansei de ser o seu palhaço
-Fazer o que sempre quis
-Cansei de curar sua BUNDA
-Quando você não se sentia feliz</br>
+  <font color=blue>Cleiton rasta vai fazer as galera debochar legal
+Ao som do cabeça de gelo! Olha a pedra
+
+Viaja reggearo!
+Chama chama chama chama chama
+Esse bicho tá desconsiderando nêgo
+Aí como é que é?
+Esse bicho tá desconsiderando nêgo
+Chama assim ó!
+O nêgo é cabeça de gelo
+E a galera da mancha azul
+O nêgo é cabeça de gelo
+Vai debochando
+Esse bicho tá desconsiderando nêgo
+Pudi radical
+Esse bicho tá desconsiderando nêgo
+Jameica!</br>
     <p>
   </body>
 </html>
