--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 </head>
  <br>
   <font color=blue> TUTS TUTS RELA RELA
+  </br>
    RELA RELA TUTS TUTS </br>
     <p>
-   <center> <img src=Dj-cleiton-rasta-cabeca-de-gelo-2014-lyrics.html width=75% height=75% > </center>
+   <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
        <tr>
          <td>
@@ -59,17 +60,20 @@
      <br>
   <font color=blue>Cleiton rasta vai fazer as galera debochar legal
 Ao som do cabeça de gelo! Olha a pedra
-
+  </p>
 Viaja reggearo!
 Chama chama chama chama chama
 Esse bicho tá desconsiderando nêgo
+
 Aí como é que é?
 Esse bicho tá desconsiderando nêgo
 Chama assim ó!
 O nêgo é cabeça de gelo
+  </p>
 E a galera da mancha azul
 O nêgo é cabeça de gelo
 Vai debochando
+  </p>
 Esse bicho tá desconsiderando nêgo
 Pudi radical
 Esse bicho tá desconsiderando nêgo
