--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
    body{
     background-color:pink;
    }
-   P{
+   P{ Text-indent:60px;
+    letter-spacing:-2px;
+     time-height: 1.2;
+     line-spacing: 2px;
     color:red;
-   font- size:12px;
+   font-size:12px;
    }
   </style>
 </head>
  <br>
-  <font color=blue> TUTS TUTS RELA RELA
+   TUTS TUTS RELA RELA
   </br>
    RELA RELA TUTS TUTS </br>
     <p>
