--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
  <head>
 <title>Bailão do Iguinho & Cacica</title>
   <style>
-   h1{
+   h1{letter-spacing:5px;
+      text-shadow:2px 2px 5px blue;
     font color:red;
     font-size:30px;
    }
@@ -14,14 +15,14 @@
      time-height: 1.2;
      line-spacing: 2px;
     color:red;
-   font-size:12px;
+   font-size:20px;
    }
   </style>
 </head>
  <br>
-   TUTS TUTS RELA RELA
+<h1>TUTS TUTS RELA RELA</h1>
   </br>
-   RELA RELA TUTS TUTS </br>
+   <h1>RELA RELA TUTS TUTS</h1> </br>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
