--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
  <head>
 <title>Bailão do Iguinho & Cacica</title>
   <style>
+   table, td, tr{
+    border: 1px, solid;
+    border-cpllapse: colapse;
+    color:blue
+    text-size:30
+    border-color:blue
+    background-color:red
    h1{letter-spacing:5px;
       text-shadow:2px 2px 5px blue;
     font color:red;
