--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    table, td, tr{
     border: 1px, solid;
     border-cpllapse: colapse;
-    color:green
-    text-size:100
-    border-color:red
-    background-color:blue
+    color:green;
+    text-size:100;
+    border-color:red;
+    background-color:blue;
    h1{letter-spacing:5px;
       text-shadow:2px 2px 5px blue;
     font color:red;
