--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    table, td, tr{
     border: 1px, solid;
     border-cpllapse: colapse;
-    color:green;
+    color:withe;
     text-size:100;
     border-color:red;
     background-color:blue;
