--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    table, td, tr{
     border: 1px, solid;
     border-cpllapse: colapse;
-    color:withe;
+    color:orange;
     text-size:100;
     border-color:red;
     background-color:blue;
@@ -33,11 +33,13 @@
    Maior video de reggae do mundo 
  </header>
  video do melhor dj de todos os tempos tocando o melhor reggae
- <footer>
-  Clique aqui para voce ver 
- </footer>
- <a href=https://www.youtube.com/watch?v=cb7lRInEa6c>
+ <br>
+ <a href=https://www.youtube.com/watch?v=cb7lRInEa6c> 
   Cleiton Rasta - Cabeça de gelo </a>
+  <footer>
+  Clique aqui para voce ver
+ </footer>
+  
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
