--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
  <br>
  <a href=https://www.youtube.com/watch?v=cb7lRInEa6c> 
   Cleiton Rasta - Cabeça de gelo </a>
+  <header>
+   Dimitri homem drogado
+  </header>
+ Homem drogado começa a dançar em have depois de uma entrevista
+ <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs>
+  Meliante drogado em have</a>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
@@ -97,6 +103,9 @@ Jameica!</br>
     <p>
       <footer>
   Clique aqui para voce ver
+ </footer>
+    <footer>
+  Clique aqui para ver o Dimitri
  </footer>
   </body>
 </html>
