--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
  <a href=https://www.youtube.com/watch?v=cb7lRInEa6c> 
   Cleiton Rasta - Cabeça de gelo </a>
   <header>
-   Dimitri homem drogado
+   Dimitri, homem drogado
   </header>
  Homem drogado começa a dançar em have depois de uma entrevista
  <br>
  <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs>
   Meliante drogado em have</a>
+  <header>
+   Rei do camarote 
+  </header>
+ O nosso poderosíssimo Rei do camarote dizendo suas peripécias
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
@@ -107,6 +111,9 @@ Jameica!</br>
  </footer>
     <footer>
   Clique aqui para ver o Dimitri
+ </footer>
+       <footer>
+  veja ele fazer suas obras de arte 
  </footer>
   </body>
 </html>
