--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     border-color:red;
     background-color:blue;
    h1{letter-spacing:5px;
-      text-shadow:2px 2px 5px blue;
-    font color:red;
+      text-shadow:2px 2px 5px purple;
+    font color:blue;
     font-size:30px;
    }
    body{
@@ -110,7 +110,7 @@ Esse bicho tá desconsiderando nêgo
 Jameica!</br>
     <p>
       <footer>
-  Clique aqui para voce ver
+  Veja clicando no texto acima 
  </footer>
   </body>
 </html>
