--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     background-color:blue;
    h1{letter-spacing:5px;
       text-shadow:2px 2px 5px purple;
-    font color:blue;
+   color:blue;
     font-size:30px;
    }
    body{
