--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     text-size:100;
     border-color:red;
     background-color:blue;
-   h1{letter-spacing:5px;
-   color:blue;
-    font-size:30px;
+   h1{color:blue;
+      letter-spacing:10px;
+      word-spacing:10px;
       text-shadow:2px 2px 5px purple;
+      size:70px;}
+      
    }
    body{
     background-color:pink;
@@ -57,7 +59,7 @@
          <td>
           i
          </td>
-        <td
+        <td>
          go
         </td>
         <td>
