--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     color:orange;
     text-size:100;
     border-color:red;
-    background-color:blue;
+    background-color:blue;}
    h1{color:blue;
       letter-spacing:10px;
       word-spacing:10px;
       text-shadow:2px 2px 5px purple;
       size:70px;}
-      
-   }
    body{
     background-color:pink;
    }
