--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     color:red;
    font-size:20px;
    }
+   a{color.red;}
+   a:hover{
+    color:lightblue;
+    font-style: italic;
+   }
+   P:hover{
+   }
   </style>
 </head>
  <br>
