--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
    a:hover{
     color:lightblue;
     font-style: italic;
-    p:hover{color:green;}
    }
-   P:hover{
+   p:hover{
+    color:green;
    }
   
   </style>
