--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
    table, td, tr{
     border: 1px, solid;
-    border-cpllapse: colapse;
+    border-collapse: colapse;
     color:orange;
     text-size:100;
     border-color:red;
@@ -13,7 +13,11 @@
       letter-spacing:10px;
       word-spacing:10px;
       text-shadow:2px 2px 5px purple;
-      size:70px;}
+      size:70px;
+     a{color.red;}
+   a:hover{
+    color:lightblue;
+    font-style: italic;}
    body{
     background-color:pink;
    }
