--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
       letter-spacing:10px;
       word-spacing:10px;
       text-shadow:2px 2px 5px purple;
-      size:70px;
-     a{color.red;}
-   a:hover{
-    color:lightblue;
-    font-style: italic;}
-   body{
-    background-color:pink;
-   }
+      size:70px;}
    P{ Text-indent:60px;
     letter-spacing:-2px;
      time-height: 1.2;
@@ -32,6 +25,7 @@
    a:hover{
     color:lightblue;
     font-style: italic;
+    P:hover{color:blue;
    }
    p:hover{
     color:green;
