--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
    a:hover{
     color:lightblue;
     font-style: italic;
-    P:hover{color:blue;
    }
-   p:hover{
-    color:green;
+    h1:hover{
+     color:pink;
    }
   
   </style>
