--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       letter-spacing:10px;
       word-spacing:10px;
       text-shadow:2px 2px 5px purple;
-      size:70px;}
+      size:70px;
+      h1:hover
+     color:pink;
+     }
    P{ Text-indent:60px;
     letter-spacing:-2px;
      time-height: 1.2;
