--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
  <head>
 <title>Bailão do Iguinho & Cacica</title>
   <style>
+   .menu{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    background-color:rgba(0,0,0,0.2);
+    margin: 10px 0px 0px 0px;
+    text-align:  center;
+    flex-wrap: wrap;
+   }
    table, td, tr{
     border: 1px, solid;
     border-collapse: colapse;
@@ -119,7 +128,9 @@ Esse bicho tá desconsiderando nêgo
 Jameica!</br>
     <p>
       <footer>
+       <div class="menu">
   Veja clicando no texto acima 
+       </div>
  </footer>
   </body>
 </html>
