--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@ Jameica!</br>
       <footer>
        <div class="menu">
   Veja clicando no texto acima 
+        Bumbuns gulosos
+        Penis eretos
        </div>
  </footer>
   </body>
