--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@ Jameica!</br>
     <p>
       <footer>
        <div class="menu">
-  Veja clicando no texto acima 
-        Bumbuns gulosos
-        Penis eretos
+  <Veja clicando no texto acima>
+        <Bumbuns gulosos>
+        <Penis eretos>
        </div>
  </footer>
   </body>
