--- a/index.html
+++ b/index.html
@@ -48,26 +48,13 @@
 <h1>TUTS TUTS RELA RELA</h1>
    <h1>RELA RELA TUTS TUTS</h1> </br>
  <header>
-   Maior video de reggae do mundo 
- </header>
- video do melhor dj de todos os tempos tocando o melhor reggae
- <br>
- <a href=https://www.youtube.com/watch?v=cb7lRInEa6c> 
-  Cleiton Rasta - Cabeça de gelo </a>
-  <header>
-   Dimitri, homem drogado
-  </header>
- Homem drogado começa a dançar em have depois de uma entrevista
- <br>
- <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs>
-  Meliante drogado em have</a>
-  <header>
-   Rei do camarote 
-  </header>
- O nosso poderosíssimo Rei do camarote dizendo suas peripécias
- <br>
- <a href=https://www.youtube.com/watch?v=atQvZ-nq0Go>
-  10 mandamentos do rei do camarote</a>
+
+ <a href=https://www.youtube.com/watch?v=cb7lRInEa6c></a>
+  
+ <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs></a>
+
+ <a href=https://www.youtube.com/watch?v=atQvZ-nq0Go></a>
+  
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
@@ -128,11 +115,9 @@ Esse bicho tá desconsiderando nêgo
 Jameica!</br>
     <p>
       <footer>
-       <div class="menu">
   Veja clicando no texto acima
-        Bumbuns gulosos
-        Penis eretos
-       </div>
+       
+       
  </footer>
   </body>
 </html>
