--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
    <h1>RELA RELA TUTS TUTS</h1> </br>
  <header>
 
- <a href=https://www.youtube.com/watch?v=cb7lRInEa6c></a>
+ <a href=https://www.youtube.com/watch?v=cb7lRInEa6c>cabeça</a>
   
- <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs></a>
+ <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs>de</a>
 
- <a href=https://www.youtube.com/watch?v=atQvZ-nq0Go></a>
+ <a href=https://www.youtube.com/watch?v=atQvZ-nq0Go>gelo</a>
   
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
