--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs>de</a>
 
  <a href=https://www.youtube.com/watch?v=atQvZ-nq0Go>gelo</a>
-  
+ </header>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
       <table >
