--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 <h1>TUTS TUTS RELA RELA</h1>
    <h1>RELA RELA TUTS TUTS</h1> </br>
  <header>
-
+<div class="menu">
  <a href=https://www.youtube.com/watch?v=cb7lRInEa6c>cabeça</a>
   
  <a href=https://www.youtube.com/watch?v=3Nkb3g-yySs>de</a>
 
  <a href=https://www.youtube.com/watch?v=atQvZ-nq0Go>gelo</a>
+</div>
  </header>
     <p>
    <center> <img src=dimitri.jpg width=75% height=75% > </center>
