--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>
+ <html>
  <head>
 <title>Bailão do Iguinho & Cacica</title>
   <style>
    .menu{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-direction: row;
     background-color:rgba(0,0,0,0.2);
     margin: 10px 0px 0px 0px;
