--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
    .menu{
     display: flex;
-    justify-content: flex-start;
+    justify-content: column;
     flex-direction: row;
     background-color:rgba(0,0,0,0.2);
     margin: 10px 0px 0px 0px;
