--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
 <title>Bailão do Iguinho & Cacica</title>
   <style>
-   .menu{
+   menu{
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
@@ -32,16 +32,32 @@
      line-spacing: 2px;
     color:red;
    font-size:20px;
-   }
+    }
    a{color.red;}
    a:hover{
-    color:lightblue;
-    font-style: italic;
+    color:red;
+    text-size: 30px;
+    font-style: \033[1m];
    }
     h1:hover{
-     color:pink;
+     color:red;
    }
-  
+   a{
+    color:red;
+    text size:30px;
+   }
+   a:hover {
+    color:dark;
+   }
+  @media screen and (min-width:700px){
+      h1:hover{
+     color:pink;
+  }
+   
+   @media screen and (min-width:1300px){
+      h1:hover{
+     color:orange;
+   }
   </style>
 </head>
  <br>
