--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
     color:dark;
    }
   @media screen and (min-width:700px){
-      h1:hover{
-     color:pink;
+       h1{color:blue;
+      
+      size:100px;
   }
    
    @media screen and (min-width:1300px){
-      h1:hover{
-     color:orange;
+       h1{color:blue;
+      
+      size:50px;
    }
   </style>
 </head>
