--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      color:pink;
      }
    P{ 
-   font-size:50px;
+   font-size:20px;
     }
    a{color.red;}
    a:hover{
@@ -46,11 +46,10 @@
     color:dark;
    }
   @media screen and (min-width:700px){
-       
+      p {ont-size:50px;}
   }
-   
    @media screen and (min-width:1000px){
-      
+      p {ont-size:80px;}
    }
   </style>
 </head>
