--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     color:dark;
    }
   @media screen and (min-width:700px){
-      p {ont-size:50px;}
+      p {font-size:50px;}
   }
    @media screen and (min-width:1000px){
-      p {ont-size:80px;}
+      p {font-size:80px;}
    }
   </style>
 </head>
