--- a/index.html
+++ b/index.html
@@ -103,29 +103,31 @@
        </tr>
       </table>
      <br>
-  <font color=blue>Cleiton rasta vai fazer as galera debochar legal
+  <font color=blue>
+ <p> Cleiton rasta vai fazer as galera debochar legal
 Ao som do cabeça de gelo! Olha a pedra
   </p>
-Viaja reggearo!
+
+<p>  Viaja reggearo!
 Chama chama chama chama chama
 Esse bicho tá desconsiderando nêgo
 
-Aí como é que é?
+ <P> Aí como é que é?
 Esse bicho tá desconsiderando nêgo
 Chama assim ó!
 O nêgo é cabeça de gelo
   </p>
-E a galera da mancha azul
+  <P> E a galera da mancha azul
 O nêgo é cabeça de gelo
 Vai debochando
   </p>
-Esse bicho tá desconsiderando nêgo
+  <P> Esse bicho tá desconsiderando nêgo
 Pudi radical
 Esse bicho tá desconsiderando nêgo
 Jameica!</br>
     <p>
       <footer>
-  Veja clicando no texto acima
+ <P>  Veja clicando no texto acima
        
        
  </footer>
